# pam_alert

./: .gitignore  CMakeLists.txt  README.md
src/: main.c
